=======================

2.20 (unreleased)
-----------------

- ZON-2328: Add premoderation for new users

- ZON-2285: Identify if view is wrapped via user agent

- ZON-2206: Handle empty subressort DAV property properly

- MAINT: Fix bumpy chronological article navigation


2.19 (2015-10-28)
-----------------

- MAINT: Reorganize article footer to fix margins and harmonize border-color
>>>>>>> master

- ZON-2168: Link-Object teaser should point to target URL

- ZON-2167: Return correctly spelled ressort names to app wrapper

- ZON-2238: Allow duplicate hiding in automatic gallery area

- ZON-2342: ZEIT Shop Follow-Up

- FIX: Make Jobbox square in 50/50


2.18 (2015-10-26)
-----------------

- ZON-2337: Exclude article lineage from ressort "administratives"

- FIX: Change number of jobs to be displayed in Jobbox

- FIX: Make Jobbox more failsave and multi instance ready

- FIX: Ignore image variants with unavailable parent groups

- FIX: Make Jobbox more failsave and multi instance ready


2.17 (2015-10-22)
-----------------

- ZON-2276: Fold/unfold comment replies

- ZON-2144: Add service link module (in fact add raw to centerpages)

- ZON-2060: Verlagsangebotskennzeichung in Hauptnavi

- Fix: Change number of jobs to be displayed in Jobbox

- Fix: Squeeze adplace ZMO mobile 8 by 2.5em width

- MAINT: Normalize spektrum teaser and parquet

- MAINT: Tweak ze.tt parquet area


2.16 (2015-10-20)
-----------------

- ZON-2334: Unbearbeitete Printartikel von der chronologischen Navigation
  ausschliessen

- ZON-1944: Implement Jobbox


2.15 (2015-10-20)
-----------------

- ZON-2206: Check whether an advertisement-nextread exists for the article's
  (sub)ressort and render it

- ZON-2277: Show origin for answer comments

- ZON-1937: Add ze.tt parquet

- ZON-2288: Generalize RSS content sources for ze.tt and spektrum

- ZON-1191: Implement the mighty ZEIT Shop Homepage area

- ZON-2273: Turn off zeit.de/beta

- ZON-2036: Bildrechte im Footer von CPs
