@@ -17,7 +17,6 @@ Change log for zeit.web
 -----------------
 
 - MAINT: Reorganize article footer to fix margins and harmonize border-color
->>>>>>> master
 
 - ZON-2168: Link-Object teaser should point to target URL
 
@@ -26,6 +25,8 @@ Change log for zeit.web
 - ZON-2238: Allow duplicate hiding in automatic gallery area
 
 - ZON-2342: ZEIT Shop Follow-Up
+
+- ZON-2336: Prefix newsfeed item title with supertitle
 
 - FIX: Make Jobbox square in 50/50
 
